// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon test match last snapshot 1`] = `
.c0 {
  color: #A42824;
}

<Icon
  color="primary"
  name="check"
  shade="main"
>
  <IconWithTheme
    color="primary"
    name="check"
    shade="main"
  >
    <IconContainer
      isVisible={true}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Icon__IconContainer-sc-1qver27-0",
              "isStatic": false,
              "lastClassName": "dPYRRL",
              "rules": Array [
                [Function],
                " ",
                [Function],
              ],
            },
            "displayName": "IconContainer",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Icon__IconContainer-sc-1qver27-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isVisible={true}
      >
        <div
          className=""
        >
          <StyledFontAwesomeIcon
            color="primary"
            icon="check"
            shade="main"
            size="sm"
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              color="primary"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Icon__StyledFontAwesomeIcon-sc-1qver27-1",
                    "isStatic": false,
                    "lastClassName": "c0",
                    "rules": Array [
                      "color:",
                      [Function],
                      ";",
                      [Function],
                    ],
                  },
                  "displayName": "StyledFontAwesomeIcon",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Icon__StyledFontAwesomeIcon-sc-1qver27-1",
                  "target": [Function],
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              icon="check"
              shade="main"
              size="sm"
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <FontAwesomeIcon
                border={false}
                className="c0"
                color="primary"
                fixedWidth={false}
                flip={null}
                icon="check"
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                shade="main"
                size="sm"
                spin={false}
                swapOpacity={false}
                symbol={false}
                theme={
                  Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  }
                }
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 fa-sm c0"
                  color="primary"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  shade="main"
                  style={Object {}}
                  theme={
                    Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    }
                  }
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </StyledComponent>
          </StyledFontAwesomeIcon>
        </div>
      </StyledComponent>
    </IconContainer>
  </IconWithTheme>
</Icon>
`;

exports[`Icon test matches snapshot with rotation 1`] = `
.c0 {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c1 {
  color: #272727;
}

<Icon
  name="check"
  rotateDegrees={45}
>
  <IconWithTheme
    name="check"
    rotateDegrees={45}
  >
    <IconContainer
      isVisible={true}
      rotateDegrees={45}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Icon__IconContainer-sc-1qver27-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                [Function],
                " ",
                [Function],
              ],
            },
            "displayName": "IconContainer",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Icon__IconContainer-sc-1qver27-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isVisible={true}
        rotateDegrees={45}
      >
        <div
          className="c0"
        >
          <StyledFontAwesomeIcon
            color="black"
            icon="check"
            shade="main"
            size="sm"
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <StyledComponent
              color="black"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Icon__StyledFontAwesomeIcon-sc-1qver27-1",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "color:",
                      [Function],
                      ";",
                      [Function],
                    ],
                  },
                  "displayName": "StyledFontAwesomeIcon",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Icon__StyledFontAwesomeIcon-sc-1qver27-1",
                  "target": [Function],
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              icon="check"
              shade="main"
              size="sm"
              theme={
                Object {
                  "action": Object {
                    "dark": Object {
                      "RGB": "79,38,98",
                      "hex": "#4E2662",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "173,101,207",
                      "hex": "#AD65CF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "116,60,143",
                      "hex": "#743C8F",
                      "on": "#FFFFFF",
                    },
                  },
                  "background": Object {
                    "RGB": "246,246,246",
                    "hex": "#F6F6F6",
                  },
                  "black": Object {
                    "main": Object {
                      "RGB": "39,39,39",
                      "hex": "#272727",
                      "on": "#FFFFFF",
                    },
                    "tint20": Object {
                      "RGB": "236,236,236",
                      "hex": "#ECECEC",
                      "on": "#272727",
                    },
                    "tint40": Object {
                      "RGB": "199,199,199",
                      "hex": "#C7C7C7",
                      "on": "#272727",
                    },
                    "tint60": Object {
                      "RGB": "160,160,160",
                      "hex": "#A0A0A0",
                      "on": "#FFFFFF",
                    },
                    "tint80": Object {
                      "RGB": "105,105,105",
                      "hex": "#696969",
                      "on": "#FFFFFF",
                    },
                  },
                  "complimentary": Object {
                    "dark": Object {
                      "RGB": "206,185,0",
                      "hex": "#CEB900",
                      "on": "#272727",
                    },
                    "light": Object {
                      "RGB": "255,245,157",
                      "hex": "#FFF59D",
                      "on": "#272727",
                    },
                    "main": Object {
                      "RGB": "255,238,82",
                      "hex": "#FFEE52",
                      "on": "#272727",
                    },
                  },
                  "error": Object {
                    "dark": Object {
                      "RGB": "197,73,1",
                      "hex": "#C54901",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "255,115,32",
                      "hex": "#FF7320",
                      "on": "#FFFFFF",
                    },
                  },
                  "primary": Object {
                    "dark": Object {
                      "RGB": "102,22,20",
                      "hex": "#661614",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "218,52,47",
                      "hex": "#DA342F",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "164,40,36",
                      "hex": "#A42824",
                      "on": "#FFFFFF",
                    },
                  },
                  "secondary": Object {
                    "dark": Object {
                      "RGB": "5,38,59",
                      "hex": "#05263B",
                      "on": "#FFFFFF",
                    },
                    "light": Object {
                      "RGB": "89,156,175",
                      "hex": "#599CAF",
                      "on": "#FFFFFF",
                    },
                    "main": Object {
                      "RGB": "11,70,107",
                      "hex": "#0B466B",
                      "on": "#FFFFFF",
                    },
                  },
                  "surface": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                  "white": Object {
                    "RGB": "255,255,255",
                    "hex": "#FFFFFF",
                    "on": "#272727",
                  },
                }
              }
            >
              <FontAwesomeIcon
                border={false}
                className="c1"
                color="black"
                fixedWidth={false}
                flip={null}
                icon="check"
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                shade="main"
                size="sm"
                spin={false}
                swapOpacity={false}
                symbol={false}
                theme={
                  Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  }
                }
                title=""
                transform={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 fa-sm c1"
                  color="black"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  shade="main"
                  style={Object {}}
                  theme={
                    Object {
                      "action": Object {
                        "dark": Object {
                          "RGB": "79,38,98",
                          "hex": "#4E2662",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "173,101,207",
                          "hex": "#AD65CF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "116,60,143",
                          "hex": "#743C8F",
                          "on": "#FFFFFF",
                        },
                      },
                      "background": Object {
                        "RGB": "246,246,246",
                        "hex": "#F6F6F6",
                      },
                      "black": Object {
                        "main": Object {
                          "RGB": "39,39,39",
                          "hex": "#272727",
                          "on": "#FFFFFF",
                        },
                        "tint20": Object {
                          "RGB": "236,236,236",
                          "hex": "#ECECEC",
                          "on": "#272727",
                        },
                        "tint40": Object {
                          "RGB": "199,199,199",
                          "hex": "#C7C7C7",
                          "on": "#272727",
                        },
                        "tint60": Object {
                          "RGB": "160,160,160",
                          "hex": "#A0A0A0",
                          "on": "#FFFFFF",
                        },
                        "tint80": Object {
                          "RGB": "105,105,105",
                          "hex": "#696969",
                          "on": "#FFFFFF",
                        },
                      },
                      "complimentary": Object {
                        "dark": Object {
                          "RGB": "206,185,0",
                          "hex": "#CEB900",
                          "on": "#272727",
                        },
                        "light": Object {
                          "RGB": "255,245,157",
                          "hex": "#FFF59D",
                          "on": "#272727",
                        },
                        "main": Object {
                          "RGB": "255,238,82",
                          "hex": "#FFEE52",
                          "on": "#272727",
                        },
                      },
                      "error": Object {
                        "dark": Object {
                          "RGB": "197,73,1",
                          "hex": "#C54901",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "255,115,32",
                          "hex": "#FF7320",
                          "on": "#FFFFFF",
                        },
                      },
                      "primary": Object {
                        "dark": Object {
                          "RGB": "102,22,20",
                          "hex": "#661614",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "218,52,47",
                          "hex": "#DA342F",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "164,40,36",
                          "hex": "#A42824",
                          "on": "#FFFFFF",
                        },
                      },
                      "secondary": Object {
                        "dark": Object {
                          "RGB": "5,38,59",
                          "hex": "#05263B",
                          "on": "#FFFFFF",
                        },
                        "light": Object {
                          "RGB": "89,156,175",
                          "hex": "#599CAF",
                          "on": "#FFFFFF",
                        },
                        "main": Object {
                          "RGB": "11,70,107",
                          "hex": "#0B466B",
                          "on": "#FFFFFF",
                        },
                      },
                      "surface": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                      "white": Object {
                        "RGB": "255,255,255",
                        "hex": "#FFFFFF",
                        "on": "#272727",
                      },
                    }
                  }
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </FontAwesomeIcon>
            </StyledComponent>
          </StyledFontAwesomeIcon>
        </div>
      </StyledComponent>
    </IconContainer>
  </IconWithTheme>
</Icon>
`;
